--- a/index.html
+++ b/index.html
@@ -21,86 +21,77 @@
             </a>
             <h2 class="visually-hidden">Пользовательская навигация.</h2>
             <div class="nav-wrapper-user">
-              <ul class="navigation-user">
-                <li class="navigation-item-search">
-                  <form
-                    class="search-form"
-                    action="https://echo.htmlacademy.ru/"
-                    method="get"
-                  >
-                    <input
-                      class="search-field"
-                      type="text"
-                      name="text"
-                      id="search-field"
-                      placeholder="Текст поиска"
-                    />
-                    <label for="search-field" class="search-label"></label><button class="search-button" value="Найти">
-                      <span class="button-text">Найти</span>
-                    </button>
-                  </form>
-                </li>
-                <li class="navigation-item-login">
-                  <a class="button login-button" href="#">
-                    <svg
-                      class="login-icon"
-                      aria-hidden="true"
-                      focusable="false"
-                      width="14"
-                      height="13"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
+                <ul class="navigation-user">
+                  <li class="navigation-item-search">
+                    <form
+                      class="search-form"
+                      action="https://echo.htmlacademy.ru/"
+                      method="get"
                     >
-                      <path
-                        d="M.5 12.4h13a6.3 6.3 0 0 0-4.7-5.5c1-.6 1.7-1.7 1.7-3 0-2-1.6-3.5-3.5-3.5a3.5 3.5 0 0 0-3.5 3.5c0 1.3.7 2.4 1.7 3a6.3 6.3 0 0 0-4.7 5.5Z"
-                        fill="#000"
+                      <input
+                        class="search-field"
+                        type="search"
+                        name="text"
+                        id="search-field"
+                        placeholder="Поиск по сайту"
                       />
-                    </svg>
-                    Войти
-                  </a>
-                </li>
-              </ul>
-              <ul class="compare-cart">
-                <li class="navigation-item">
-                  <a class="link compare" href="#">
-                    <svg
-                      class="compare-icon"
-                      aria-hidden="true"
-                      focusable="false"
-                      width="10"
-                      height="13"
-                      fill="currentColor"
-                      xmlns="http://www.w3.org/2000/svg"
+                      <label for="search-field" class="search-label"></label><button class="search-button" value="Найти">
+                        <span class="button-text">Найти</span>
+                      </button>
+                    </form>
+                  </li>
+                  <li class="navigation-item-login">
+                    <a class="button login-button" href="#">
+                      <svg
+                        class="login-icon"
+                        aria-hidden="true"
+                        focusable="false"
+                        width="14"
+                        height="13"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M.5 12.4h13a6.3 6.3 0 0 0-4.7-5.5c1-.6 1.7-1.7 1.7-3 0-2-1.6-3.5-3.5-3.5a3.5 3.5 0 0 0-3.5 3.5c0 1.3.7 2.4 1.7 3a6.3 6.3 0 0 0-4.7 5.5Z"
+                          fill="#000"
+                        />
+                      </svg>
+                      Войти
+                    </a>
+                  </li>
+                </ul>
+                <ul class="compare-cart">
+                  <li class="navigation-item">
+                    <a class="link compare" href="#">
+                      <svg
+                        class="compare-icon"
+                        aria-hidden="true"
+                        focusable="false"
+                        width="10"
+                        height="13"
+                        fill="currentColor"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M6 .4H4v12h2V.4ZM2 4.4H0v8h2v-8ZM10 3.4H8v9h2v-9Z"
+                          fill="#000"
+                        />
+                      </svg>
+                      Сравнить</a
                     >
-                      <path
-                        d="M6 .4H4v12h2V.4ZM2 4.4H0v8h2v-8ZM10 3.4H8v9h2v-9Z"
-                        fill="#000"
-                      />
-                    </svg>
-                    Сравнить</a
-                  >
-                </li>
-                <li class="navigation-item">
-                  <a class="link cart" href="#">
-                    <svg
-                      class="cart-icon"
-                      aria-hidden="true"
-                      focusable="false"
-                      width="16"
-                      height="15"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
+                  </li>
+                  <li class="navigation-item">
+                    <a class="link cart" href="#">
+                      <svg
+                        class="cart-icon"
+                        aria-hidden="true"
+                        focusable="false"
+                        width="31" height="22" viewBox="0 0 31 22" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)"><path d="m30.3 7.39-3.5.2-3.2-4.9c-.1-.2-.4-.3-.6-.3-.2 0-.5.1-.6.3l-3.2 4.9h-3.5c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1l1.9-6.9v-.2c0-.4-.3-.8-.7-.8ZM23 4.29l2.2 3.2h-4.3l2.1-3.2Z" fill="#000"/></g><circle cx="10.5" cy="11.39" r="10.5" fill="#fff"/><path d="M7.4 15.89a.35.35 0 0 1-.24-.09.35.35 0 0 1-.08-.23v-.45c0-.09.02-.18.07-.28.04-.1.14-.22.28-.34l2.97-2.97c.47-.4.84-.74 1.12-1.02.28-.29.47-.56.58-.82.12-.26.19-.54.19-.82 0-.53-.15-.95-.45-1.26-.3-.31-.74-.47-1.33-.47-.38 0-.7.08-.97.24-.27.15-.48.36-.64.63-.15.26-.25.56-.3.9-.02.11-.07.2-.15.24a.4.4 0 0 1-.21.07h-.73a.32.32 0 0 1-.2-.07.27.27 0 0 1-.1-.2 3.1 3.1 0 0 1 1.87-2.74c.41-.18.89-.28 1.43-.28.73 0 1.34.14 1.8.41.48.26.83.61 1.05 1.05a3.12 3.12 0 0 1 .13 2.58c-.14.33-.35.66-.62 1-.26.3-.58.63-.98.97l-2.68 2.73h4.36c.1 0 .19.03.24.08.07.06.1.14.1.24v.58c0 .09-.03.17-.1.23-.05.06-.13.09-.24.09H7.4Z" fill="#000"/><defs><clipPath id="a"><path fill="#fff" transform="translate(15 2.39)" d="M0 0h16v14H0z"/></clipPath></defs></svg>
+                      Корзина</a
                     >
-                      <path
-                        d="m15.3 5.4-3.5.2-3.2-5L8 .5c-.2 0-.5 0-.6.3L4.2 5.6H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1 1.4 1h9.4c.7 0 1.2-.3 1.4-1l1.9-7v-.1c0-.4-.3-.8-.7-.8ZM8 2.3l2.2 3.2H5.9L8 2.3Z"
-                        fill="#000"
-                      />
-                    </svg>
-                    Корзина</a
-                  >
-                </li>
-              </ul>
-            </div>
+                  </li>
+                </ul>
+              </div>
             <div class="nav-main-wrapper">
                 <button class="button catalog-button">
                 Каталог товаров
@@ -372,15 +363,10 @@
       <div class="delivery-notice container">
         <button class="button delivery-notice-link" href="#">
           <svg
-                  class="delivery-car-icon" 
-                  aria-hidden="true"
-                  focusable="false" width="125" 
-                  height="100" viewBox="0 0 125 100" 
-                  fill='currentColor' xmlns="http://www.w3.org/2000/svg">
-                  <path d="M0 0h125v100H0z"/><g clip-path="url(#a)" fill="#000">
-                    <path d="m85.7 50.4-6.5-8.2c-.3-.4-.7-.6-1.2-.6h-8.3v-5.1c0-.8-.7-1.5-1.5-1.5H40.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h26.2v21.7H54.8c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.2 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h13.4c.8 0 1.5-.7 1.5-1.5V44.6h7.6l5.7 7.3v7.9h-2.2c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.1 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h3.7c.8 0 1.5-.7 1.5-1.5v-9.9c0-.4-.1-.7-.3-1ZM50.3 63c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Zm26.1 0c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Z"/>
-                    <path d="M58.4 44.6c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5H43.8c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.6ZM56.7 49.7c0-.8-.7-1.5-1.5-1.5H40.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.7c.8 0 1.5-.7 1.5-1.5Z"/>
-                  </g><defs><clipPath id="a"><path transform="translate(39 35)" d="M0 0h47v31H0z"/></clipPath></defs></svg>
+          class="delivery-car-icon" 
+          aria-hidden="true"
+          focusable="false"
+          width="47" height="32" viewBox="0 0 47 32" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)" fill="#000"><path d="m46.7 15.76-6.5-8.2c-.3-.4-.7-.6-1.2-.6h-8.3v-5.1c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h26.2V25.06H15.8c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.2 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h13.4c.8 0 1.5-.7 1.5-1.5V9.96h7.6l5.7 7.3v7.9h-2.2c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.1 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h3.7c.8 0 1.5-.7 1.5-1.5v-9.9c0-.4-.1-.7-.3-1Zm-35.4 12.6c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Zm26.1 0c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Z"/><path d="M19.4 9.96c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5H4.8c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.6ZM17.7 15.06c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.7c.8 0 1.5-.7 1.5-1.5Z"/></g><defs><clipPath id="a"><path fill="#fff" transform="translate(0 .36)" d="M0 0h47v31H0z"/></clipPath></defs></svg>
           <span class="delivery-notice-text">Доставим редкий товар под заказ</span>
           <svg
           class="delivery-info" 
@@ -454,7 +440,7 @@
                 name="email"
                 placeholder="Ваш e-mail"
                 required
-              /><button class="button subscribe-button" href="#">Подписаться</button>
+              /><button class="button subscribe-button" href="#"><span class="subscribe-text">Подписаться</span></button>
             </form>
             <span class="warning">Это бесплатно</span>
           </div>
