--- a/8/index.html
+++ b/8/index.html
@@ -22,86 +22,77 @@
             </a>
             <h2 class="visually-hidden">Пользовательская навигация.</h2>
             <div class="nav-wrapper-user">
-              <ul class="navigation-user">
-                <li class="navigation-item-search">
-                  <form
-                    class="search-form"
-                    action="https://echo.htmlacademy.ru/"
-                    method="get"
-                  >
-                    <input
-                      class="search-field"
-                      type="text"
-                      name="text"
-                      id="search-field"
-                      placeholder="Текст поиска"
-                    />
-                    <label for="search-field" class="search-label"></label><button class="search-button" value="Найти">
-                      <span class="button-text">Найти</span>
-                    </button>
-                  </form>
-                </li>
-                <li class="navigation-item-login">
-                  <a class="button login-button" href="#">
-                    <svg
-                      class="login-icon"
-                      aria-hidden="true"
-                      focusable="false"
-                      width="14"
-                      height="13"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
+                <ul class="navigation-user">
+                  <li class="navigation-item-search">
+                    <form
+                      class="search-form"
+                      action="https://echo.htmlacademy.ru/"
+                      method="get"
                     >
-                      <path
-                        d="M.5 12.4h13a6.3 6.3 0 0 0-4.7-5.5c1-.6 1.7-1.7 1.7-3 0-2-1.6-3.5-3.5-3.5a3.5 3.5 0 0 0-3.5 3.5c0 1.3.7 2.4 1.7 3a6.3 6.3 0 0 0-4.7 5.5Z"
-                        fill="#000"
+                      <input
+                        class="search-field"
+                        type="search"
+                        name="text"
+                        id="search-field"
+                        placeholder="Поиск по сайту"
                       />
-                    </svg>
-                    Войти
-                  </a>
-                </li>
-              </ul>
-              <ul class="compare-cart">
-                <li class="navigation-item">
-                  <a class="link compare" href="#">
-                    <svg
-                      class="compare-icon"
-                      aria-hidden="true"
-                      focusable="false"
-                      width="10"
-                      height="13"
-                      fill="currentColor"
-                      xmlns="http://www.w3.org/2000/svg"
+                      <label for="search-field" class="search-label"></label><button class="search-button" value="Найти">
+                        <span class="button-text">Найти</span>
+                      </button>
+                    </form>
+                  </li>
+                  <li class="navigation-item-login">
+                    <a class="button login-button" href="#">
+                      <svg
+                        class="login-icon"
+                        aria-hidden="true"
+                        focusable="false"
+                        width="14"
+                        height="13"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M.5 12.4h13a6.3 6.3 0 0 0-4.7-5.5c1-.6 1.7-1.7 1.7-3 0-2-1.6-3.5-3.5-3.5a3.5 3.5 0 0 0-3.5 3.5c0 1.3.7 2.4 1.7 3a6.3 6.3 0 0 0-4.7 5.5Z"
+                          fill="#000"
+                        />
+                      </svg>
+                      Войти
+                    </a>
+                  </li>
+                </ul>
+                <ul class="compare-cart-index">
+                  <li class="navigation-item">
+                    <a class="link compare" href="#">
+                      <svg
+                        class="compare-icon"
+                        aria-hidden="true"
+                        focusable="false"
+                        width="10"
+                        height="13"
+                        fill="currentColor"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M6 .4H4v12h2V.4ZM2 4.4H0v8h2v-8ZM10 3.4H8v9h2v-9Z"
+                          fill="#000"
+                        />
+                      </svg>
+                      Сравнить</a
                     >
-                      <path
-                        d="M6 .4H4v12h2V.4ZM2 4.4H0v8h2v-8ZM10 3.4H8v9h2v-9Z"
-                        fill="#000"
-                      />
-                    </svg>
-                    Сравнить</a
-                  >
-                </li>
-                <li class="navigation-item">
-                  <a class="link cart" href="#">
-                    <svg
-                      class="cart-icon"
-                      aria-hidden="true"
-                      focusable="false"
-                      width="16"
-                      height="15"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
+                  </li>
+                  <li class="navigation-item">
+                    <a class="link cart" href="#">
+                      <svg
+                        class="cart-icon"
+                        aria-hidden="true"
+                        focusable="false"
+                        width="31" height="22" viewBox="0 0 31 22" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)"><path d="m30.3 7.39-3.5.2-3.2-4.9c-.1-.2-.4-.3-.6-.3-.2 0-.5.1-.6.3l-3.2 4.9h-3.5c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1l1.9-6.9v-.2c0-.4-.3-.8-.7-.8ZM23 4.29l2.2 3.2h-4.3l2.1-3.2Z" fill="#000"/></g><circle cx="10.5" cy="11.39" r="10.5" fill="#fff"/><path d="M7.4 15.89a.35.35 0 0 1-.24-.09.35.35 0 0 1-.08-.23v-.45c0-.09.02-.18.07-.28.04-.1.14-.22.28-.34l2.97-2.97c.47-.4.84-.74 1.12-1.02.28-.29.47-.56.58-.82.12-.26.19-.54.19-.82 0-.53-.15-.95-.45-1.26-.3-.31-.74-.47-1.33-.47-.38 0-.7.08-.97.24-.27.15-.48.36-.64.63-.15.26-.25.56-.3.9-.02.11-.07.2-.15.24a.4.4 0 0 1-.21.07h-.73a.32.32 0 0 1-.2-.07.27.27 0 0 1-.1-.2 3.1 3.1 0 0 1 1.87-2.74c.41-.18.89-.28 1.43-.28.73 0 1.34.14 1.8.41.48.26.83.61 1.05 1.05a3.12 3.12 0 0 1 .13 2.58c-.14.33-.35.66-.62 1-.26.3-.58.63-.98.97l-2.68 2.73h4.36c.1 0 .19.03.24.08.07.06.1.14.1.24v.58c0 .09-.03.17-.1.23-.05.06-.13.09-.24.09H7.4Z" fill="#000"/><defs><clipPath id="a"><path fill="#fff" transform="translate(15 2.39)" d="M0 0h16v14H0z"/></clipPath></defs></svg>
+                      Корзина</a
                     >
-                      <path
-                        d="m15.3 5.4-3.5.2-3.2-5L8 .5c-.2 0-.5 0-.6.3L4.2 5.6H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1 1.4 1h9.4c.7 0 1.2-.3 1.4-1l1.9-7v-.1c0-.4-.3-.8-.7-.8ZM8 2.3l2.2 3.2H5.9L8 2.3Z"
-                        fill="#000"
-                      />
-                    </svg>
-                    Корзина</a
-                  >
-                </li>
-              </ul>
-            </div>
+                  </li>
+                </ul>
+              </div>
             <div class="nav-main-wrapper">
                 <button class="button catalog-button">
                 Каталог товаров
@@ -190,7 +181,7 @@
             <div class="pagination-wrapper">
               <ul class="slider-pagination">
                 <li class="slider-pagination-item">
-                  <button class="button slider-pagination-button-current" href="#">
+                  <button class="button slider-pagination-button-current">
                     <svg
                       class="slider-current-icon"
                       aria-hidden="true"
@@ -211,10 +202,10 @@
                       />
                     </svg>
                     <span class="visually-hidden">1 описание.</span>
-                  </a>
+                  </button>
                 </li>
                 <li class="slider-pagination-item">
-                  <button class="button slider-pagination-button" href="#">
+                  <button class="button slider-pagination-button">
                     <svg
                       class="slider-current-icon"
                       aria-hidden="true"
@@ -227,10 +218,10 @@
                       <circle cx="10.5" cy="11.4" r="10.5" fill="#fff" />
                     </svg>
                     <span class="visually-hidden">2 описание.</span>
-                  </a>
+                  </button>
                 </li>
                 <li class="slider-pagination-item">
-                  <button class="button slider-pagination-button" href="#">
+                  <button class="button slider-pagination-button">
                     <svg
                       class="slider-current-icon"
                       aria-hidden="true"
@@ -243,13 +234,13 @@
                       <circle cx="10.5" cy="11.4" r="10.5" fill="#fff" />
                     </svg>
                     <span class="visually-hidden">3 описание.</span>
-                  </a>
+                  </button>
                 </li>
               </ul>
             </div>     
             <button class="button button-more">
               <span class="more-text">Подробнее</span>
-            </a>
+            </button>
           </div>
           <ul class="spec-list">
             <li class="spec-item-range">
@@ -350,13 +341,13 @@
           <div class="services-list-wrapper">
             <ul class="services-list">
               <li class="services-item">
-                <button class="button button-delivery" href="#"><span class="delivery-text">Доставка</span></a>
+                <button class="button button-delivery"><span class="delivery-text">Доставка</span></button>
               </li>
               <li class="services-item">
-                <button class="button button-warranty" href="#"><span class="warranty-text">Гарантия</span></a>
+                <button class="button button-warranty"><span class="warranty-text">Гарантия</span></button>
               </li>
               <li class="services-item">
-                <button class="button button-credit" href="#"><span class="credit-text">Кредит</a>
+                <button class="button button-credit"><span class="credit-text">Кредит</span></button>
               </li>
             </ul>
           </div>
@@ -371,23 +362,26 @@
         </div>
       </section>
       <div class="delivery-notice container">
-        <button class="button delivery-notice-link" href="#">
-          <svg
-                  class="delivery-car-icon" 
-                  aria-hidden="true"
-                  focusable="false" width="125" 
-                  height="100" viewBox="0 0 125 100" 
-                  fill='currentColor' xmlns="http://www.w3.org/2000/svg">
-                  <path d="M0 0h125v100H0z"/><g clip-path="url(#a)" fill="#000">
-                    <path d="m85.7 50.4-6.5-8.2c-.3-.4-.7-.6-1.2-.6h-8.3v-5.1c0-.8-.7-1.5-1.5-1.5H40.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h26.2v21.7H54.8c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.2 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h13.4c.8 0 1.5-.7 1.5-1.5V44.6h7.6l5.7 7.3v7.9h-2.2c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.1 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h3.7c.8 0 1.5-.7 1.5-1.5v-9.9c0-.4-.1-.7-.3-1ZM50.3 63c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Zm26.1 0c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Z"/>
-                    <path d="M58.4 44.6c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5H43.8c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.6ZM56.7 49.7c0-.8-.7-1.5-1.5-1.5H40.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.7c.8 0 1.5-.7 1.5-1.5Z"/>
-                  </g><defs><clipPath id="a"><path transform="translate(39 35)" d="M0 0h47v31H0z"/></clipPath></defs></svg>
+        <button class="button delivery-notice-link">
+          <svg class="delivery-car-icon"
+          width="47" height="31" viewBox="0 0 47 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_28600_23)">
+            <path d="M46.7 15.4L40.2 7.2C39.9 6.8 39.5 6.6 39 6.6H30.7V1.5C30.7 0.7 30 0 29.2 0H1.5C0.7 0 0 0.7 0 1.5C0 2.3 0.7 3 1.5 3H27.7V24.7H15.8C15.2 22.8 13.4 21.4 11.3 21.4C8.7 21.4 6.5 23.6 6.5 26.2C6.5 28.8 8.7 31 11.3 31C13.4 31 15.2 29.6 15.8 27.7H29.2C30 27.7 30.7 27 30.7 26.2V9.6H38.3L44 16.9V24.8H41.8C41.2 22.9 39.4 21.5 37.3 21.5C34.7 21.5 32.5 23.7 32.5 26.3C32.5 28.9 34.6 31.1 37.3 31.1C39.4 31.1 41.2 29.7 41.8 27.8H45.5C46.3 27.8 47 27.1 47 26.3V16.4C47 16 46.9 15.7 46.7 15.4ZM11.3 28C10.3 28 9.5 27.2 9.5 26.2C9.5 25.2 10.3 24.4 11.3 24.4C12.3 24.4 13.1 25.2 13.1 26.2C13.1 27.2 12.2 28 11.3 28ZM37.4 28C36.4 28 35.6 27.2 35.6 26.2C35.6 25.2 36.4 24.4 37.4 24.4C38.4 24.4 39.2 25.2 39.2 26.2C39.2 27.2 38.3 28 37.4 28Z" fill="black"/>
+            <path d="M19.4 9.6C20.2 9.6 20.9 8.9 20.9 8.1C20.9 7.3 20.2 6.6 19.4 6.6H4.8C4 6.6 3.3 7.3 3.3 8.1C3.3 8.9 4 9.6 4.8 9.6H19.4Z" fill="black"/>
+            <path d="M17.7 14.7C17.7 13.9 17 13.2 16.2 13.2H1.5C0.7 13.2 0 13.9 0 14.7C0 15.5 0.7 16.2 1.5 16.2H16.2C17 16.2 17.7 15.5 17.7 14.7Z" fill="black"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_28600_23">
+            <rect width="47" height="31" fill="white"/>
+            </clipPath>
+            </defs>
+            </svg>
           <span class="delivery-notice-text">Доставим редкий товар под заказ</span>
           <svg
           class="delivery-info" 
           aria-hidden="true"
           focusable="false" width="4" height="12" viewBox="0 0 4 12" fill='currentColor' xmlns="http://www.w3.org/2000/svg"><path d="M3 0H1v2h2V0ZM3 4H1v8h2V4Z"/></svg>
-        </a>
+        </button>
       </div>
       <section class="about-container container">
         <div class="about-wrapper">
@@ -407,7 +401,7 @@
             <li class="about-delivery-description-item"><b>СДИК</b></li>
             <li class="about-delivery-description-item"><b>ТоксБерри</b></li>
           </ul>
-          <button class="more-about" href="#"><span class="about-text">Подробнее о нас</span></a>
+          <button class="more-about"><span class="about-text">Подробнее о нас</span></button>
         </div>
         <div class="contacts-wrapper">
           <h2 class="title contacts-title" id="contacts">Контакты</h2>
@@ -427,7 +421,7 @@
             <li class="schedule-item">пн—пт: с 10:00 до 22:00</li>
             <li class="schedule-item">сб—вс: с 10:00 до 19:00</li>
           </ul>
-          <button class="button contact-us" href="#"><span class="contact-text">Напишите нам</span></a>
+          <button class="button contact-us"><span class="contact-text">Напишите нам</span></button>
         </div>
       </section>
       <section class="newsletter">
@@ -455,7 +449,7 @@
                 name="email"
                 placeholder="Ваш e-mail"
                 required
-              /><button class="button subscribe-button" href="#">Подписаться</button>
+              /><button class="button subscribe-button" ><span class="subscribe-text">Подписаться</span></button>
             </form>
             <span class="warning">Это бесплатно</span>
           </div>
